...
    setUpViews()
    setUpConstraints()
    setUpBinding()
  }

  private func setUpViews() {
    title = "Weather Forecast"

    view.backgroundColor = .white
    view.addSubviews(tableView, loadingIncidatorView)

    if #available(iOS 11.0, *) {
      navigationItem.hidesSearchBarWhenScrolling = false
...
